--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
-/* configuração deitado (portrait) */
+/* configuração deitado (landscape) */
+
+body{
+    background-image: url(../imagem/cev-landscape.jpg);
+    background-position: left bottom;
+}
