--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
-/* configuração em pé (landscape) */
+/* configuração em pé (portrait)*/
+
+body{
+    background-image: url(../imagem/cev-portrait.jpg);
+    background-position: center bottom;
+}
